--- a/meson.build
+++ b/meson.build
@@ -2,12 +2,13 @@ project(
   'learn-ogl',
   'cpp',
   'c',
+  meson_version: '1.7.0',
   license: 'GNU',
   default_options: [
-    '-std=++23',
+    'cpp_std=++23',
     'default_library=static',
-    '-Dwarning_level=3',
-    '-Dbuild_type=debug',
+    'Dwarning_level=3',
+    'Dbuild_type=debug',
   ],
 )
 
