Add container texture & more
just fixed some warnings and things

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,7 +3,7 @@ glfw_dep = dependency('glfw3')
 deps = [glfw_dep]
 inc = ['include']
 cpp_arg = []
-link_arg = []
+link_arg = [ '-lX11', '-lXi', '-lXrandr', '-lpthread', '-lGL', '-ldl' ]
 
 executable(
   'logl',
